Fixed Resource OOM error

--- a/ELMo_on_IEMOCAP_for_ERC.ipynb
+++ b/ELMo_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ELMo on IEMOCAP for ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOw8mGjnBJ9bP/OfKFK8QRA",
+      "authorship_tag": "ABX9TyN2J45zzhRV/hPj7nXeJ3ly",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -304,17 +304,129 @@
       "cell_type": "code",
       "metadata": {
         "id": "zSaGSgzLc19f",
-        "outputId": "7081655d-7b2c-48dc-8fe7-b2d7af39ffe3",
+        "outputId": "ed50ef74-2c4e-46bf-b37d-149c176aac09",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "elmo_train = elmo_vectors(processed_data)\n",
-        "elmo_test = elmo_vectors(test_processed_data)"
+        "elmo_train = [elmo_vectors(x) for x in list_train]\n",
+        "elmo_test = [elmo_vectors(x) for x in list_test]"
       ],
       "execution_count": null,
       "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "INFO:tensorflow:Saver not created because there are no variables in the graph to restore\n"
+          ],
+          "name": "stderr"
+        },
         {
           "output_type": "stream",
           "text": [
