--- a/ELMo_Attention_Based_LSTM.ipynb
+++ b/ELMo_Attention_Based_LSTM.ipynb
@@ -3,9 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "ELMo Attention Based LSTM.ipynb",
+      "name": "ELMo_Attention_Based_LSTM.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNA9hTVmujSMUOvKyiVBCCu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +28,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "0gYaTI366kk0",
-        "outputId": "af0c1999-ef77-418a-e5bf-7e1ae9a38452",
+        "outputId": "aea6f389-b77a-4abc-d6ad-ca15ae9c0790",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -52,7 +51,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "IB5TU9EL7fwR",
-        "outputId": "26bb7722-5fc5-4bab-f68b-686e377f80d1",
+        "outputId": "cb09d147-a078-4ea1-a019-6c3e1988c14a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -66,9 +65,9 @@
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: tensorflow-hub in /usr/local/lib/python3.6/dist-packages (0.9.0)\n",
+            "Requirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-hub) (1.18.5)\n",
             "Requirement already satisfied: protobuf>=3.8.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-hub) (3.12.4)\n",
             "Requirement already satisfied: six>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-hub) (1.15.0)\n",
-            "Requirement already satisfied: numpy>=1.12.0 in /usr/local/lib/python3.6/dist-packages (from tensorflow-hub) (1.18.5)\n",
             "Requirement already satisfied: setuptools in /usr/local/lib/python3.6/dist-packages (from protobuf>=3.8.0->tensorflow-hub) (50.3.2)\n"
           ],
           "name": "stdout"
@@ -104,14 +103,14 @@
         "    # return average of ELMo features\n",
         "    return sess.run(tf.reduce_mean(embeddings,1))"
       ],
-      "execution_count": 14,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "Sw86aVyd7wiJ",
-        "outputId": "a8e5e06e-c471-47c8-c9a1-49d27bbf2f3b",
+        "outputId": "9f614584-f137-4a24-eee9-7ddec9dea939",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -120,7 +119,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -135,7 +134,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "d8X4xFFx8ICe",
-        "outputId": "c6811594-94f2-421f-ae4a-6ed47aab470e",
+        "outputId": "fcf0998c-bc62-41c9-c2eb-d8a839982118",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -157,7 +156,7 @@
         "from keras.layers import Layer\n",
         "import keras.backend as K"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -183,7 +182,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -209,7 +208,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -221,7 +220,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -233,7 +232,7 @@
         "for i in range(0,len(processed_data)):\n",
         "  processed_data[i]= ' '.join(processed_data[i])"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -245,7 +244,7 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -270,7 +269,7 @@
         "  batches.append(temp)\n",
         "  return batches"
       ],
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -282,14 +281,14 @@
         "list_train = create_batches(processed_data)\n",
         "list_test = create_batches(test_processed_data)"
       ],
-      "execution_count": 12,
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "mNu6br9G8bhi",
-        "outputId": "8d8a3b68-b2d6-42af-ce89-608ad60a3398",
+        "outputId": "181f8da9-e540-4498-bb37-ca0930bcfa23",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -1252,7 +1251,19 @@
         "    def get_config(self):\n",
         "        return super(attention,self).get_config()"
       ],
-      "execution_count": 18,
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V3jO_iG1eAQv"
+      },
+      "source": [
+        "def myAct(out):\n",
+        "    return K.softmax(K.tanh(out))"
+      ],
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -1264,43 +1275,86 @@
         "X=np.asarray(elmo_train_new).reshape(4699,1024,1)\n",
         "test_X=np.asarray(elmo_test_new).reshape(1623,1024,1)"
       ],
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XrEfcaov80iB",
-        "outputId": "fc0ba757-2293-479d-d152-0ebf0330a541",
+        "id": "XrEfcaov80iB"
+      },
+      "source": [
+        "model=Sequential()\n",
+        "model.add(LSTM(20,input_shape=(1024, 1), return_sequences=False, activation=myAct))\n",
+        "model.add(Dropout(0.5))\n",
+        "model.add(Dense(6, activation='softmax'))\n",
+        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+      ],
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_naj-QA_ewME",
+        "outputId": "66c86557-6697-469f-d0af-13552d6703ab",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
       "source": [
-        "model = Sequential()\n",
-        "model.add(Bidirectional(LSTM(20), input_shape=(1024, 1)))\n",
-        "model.add(Dense(6, activation='softmax'))\n",
-        "model.compile(loss='categorical_crossentropy', optimizer='adam', metrics=['accuracy'])"
+        "model.fit(X, Y, epochs = 20,  verbose = 1)\n",
+        "score,acc=model.evaluate(test_X,test_Y,verbose=2)\n",
+        "print(\"Accuracy : \"+ str(acc))"
       ],
-      "execution_count": 20,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "If using Keras pass *_constraint arguments to layers.\n"
+            "Epoch 1/20\n",
+            "4699/4699 [==============================] - 136s 29ms/step - loss: 1.7665 - accuracy: 0.2552\n",
+            "Epoch 2/20\n",
+            "4699/4699 [==============================] - 138s 29ms/step - loss: 1.7426 - accuracy: 0.2592\n",
+            "Epoch 3/20\n",
+            "4699/4699 [==============================] - 137s 29ms/step - loss: 1.7316 - accuracy: 0.2560\n",
+            "Epoch 4/20\n",
+            "4699/4699 [==============================] - 141s 30ms/step - loss: 1.7263 - accuracy: 0.2556\n",
+            "Epoch 5/20\n",
+            "4699/4699 [==============================] - 144s 31ms/step - loss: 1.7241 - accuracy: 0.2547\n",
+            "Epoch 6/20\n",
+            "4699/4699 [==============================] - 143s 31ms/step - loss: 1.7220 - accuracy: 0.2577\n",
+            "Epoch 7/20\n",
+            "4699/4699 [==============================] - 144s 31ms/step - loss: 1.7228 - accuracy: 0.2560\n",
+            "Epoch 8/20\n",
+            "4699/4699 [==============================] - 142s 30ms/step - loss: 1.7223 - accuracy: 0.2586\n",
+            "Epoch 9/20\n",
+            "4699/4699 [==============================] - 144s 31ms/step - loss: 1.7222 - accuracy: 0.2586\n",
+            "Epoch 10/20\n",
+            "4699/4699 [==============================] - 140s 30ms/step - loss: 1.7218 - accuracy: 0.2571\n",
+            "Epoch 11/20\n",
+            "4699/4699 [==============================] - 141s 30ms/step - loss: 1.7221 - accuracy: 0.2567\n",
+            "Epoch 12/20\n",
+            "4699/4699 [==============================] - 140s 30ms/step - loss: 1.7217 - accuracy: 0.2552\n",
+            "Epoch 13/20\n",
+            "4699/4699 [==============================] - 137s 29ms/step - loss: 1.7220 - accuracy: 0.2571\n",
+            "Epoch 14/20\n",
+            "4699/4699 [==============================] - 136s 29ms/step - loss: 1.7234 - accuracy: 0.2558\n",
+            "Epoch 15/20\n",
+            "4699/4699 [==============================] - 136s 29ms/step - loss: 1.7213 - accuracy: 0.2577\n",
+            "Epoch 16/20\n",
+            "4699/4699 [==============================] - 134s 29ms/step - loss: 1.7210 - accuracy: 0.2584\n",
+            "Epoch 17/20\n",
+            "4699/4699 [==============================] - 136s 29ms/step - loss: 1.7210 - accuracy: 0.2569\n",
+            "Epoch 18/20\n",
+            "4699/4699 [==============================] - 138s 29ms/step - loss: 1.7220 - accuracy: 0.2573\n",
+            "Epoch 19/20\n",
+            "4699/4699 [==============================] - 138s 29ms/step - loss: 1.7222 - accuracy: 0.2569\n",
+            "Epoch 20/20\n",
+            "4699/4699 [==============================] - 137s 29ms/step - loss: 1.7217 - accuracy: 0.2579\n",
+            "Accuracy : 0.23475046455860138\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /tensorflow-1.15.2/python3.6/tensorflow_core/python/ops/resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "If using Keras pass *_constraint arguments to layers.\n"
-          ],
-          "name": "stderr"
         }
       ]
     }
