Added data in required format

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN7rBFGWC3SYjXKwfyQfIxN",
+      "authorship_tag": "ABX9TyPSn9dHy2Am36FFWErcN7zE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,9 +40,10 @@
         "from tensorflow.keras.optimizers import Adam\n",
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint\n",
-        "import tensorflow_hub as hub"
+        "import tensorflow_hub as hub\n",
+        "import pickle"
       ],
-      "execution_count": 1,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -151,7 +152,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rpTgXa2hjje-"
+        "id": "rpTgXa2hjje-",
+        "outputId": "5190e328-97c6-4034-9696-adf42cb0b66b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#Cell takes time between 2-10 mins. Run and wait\n",
@@ -159,7 +164,119 @@
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "CPU times: user 43.8 s, sys: 11 s, total: 54.8 s\n",
+            "Wall time: 2min 9s\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "BY5zw8JhkcKX"
+      },
+      "source": [
+        "**Adding IEMOCAP data in the required format**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oZ5pmNKbkf05",
+        "outputId": "61106023-7018-474e-9b7f-09cde157d744",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/gdrive')"
+      ],
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hc4k5JnFnSR8"
+      },
+      "source": [
+        "with open('/content/gdrive/My Drive/iemocap/train/sentences.pkl', 'rb') as f:\n",
+        "    data = pickle.load(f)\n",
+        "with open('/content/gdrive/My Drive/iemocap/train/labels.pkl', 'rb') as f:\n",
+        "    labels = pickle.load(f)\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/sentences.pkl', 'rb') as f:\n",
+        "    test_data = pickle.load(f)\n",
+        "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
+        "    test_labels = pickle.load(f)"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QxFLffkanaY1"
+      },
+      "source": [
+        "def preprocessing(data,labels):\n",
+        "  processed_data=[]\n",
+        "  processed_label=[]\n",
+        "  for i in range(0,len(data)):\n",
+        "    for j in range(0,len(data[i])):\n",
+        "      intermediate_data=[]\n",
+        "      intermediate_label=[]\n",
+        "      for k in range(0,len(data[i][j])):\n",
+        "        text=data[i][j][k]\n",
+        "        if text != '<eos>'and text!='<pad>':\n",
+        "          intermediate_data.append(text)\n",
+        "      processed_data.append(intermediate_data)\n",
+        "  for i in labels:\n",
+        "    for j in i:\n",
+        "      processed_label.append(j)\n",
+        "  return processed_data,processed_label"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VJZvCVeKndGA"
+      },
+      "source": [
+        "processed_data,processed_label = preprocessing(data,labels)\n",
+        "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "V72pOXvcnfTc"
+      },
+      "source": [
+        "for i in range(0,len(processed_data)):\n",
+        "  processed_data[i]= ' '.join(processed_data[i])\n",
+        "for i in range(0,len(test_processed_data)):\n",
+        "  test_processed_data[i]=' '.join(test_processed_data[i])"
+      ],
+      "execution_count": 13,
       "outputs": []
     }
   ]
