Found till Accuracy : 0.5027

--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPSn9dHy2Am36FFWErcN7zE",
+      "authorship_tag": "ABX9TyOsFLNvcW9Z0tUuKx1+cZYb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,9 +41,10 @@
         "from tensorflow.keras.models import Model\n",
         "from tensorflow.keras.callbacks import ModelCheckpoint\n",
         "import tensorflow_hub as hub\n",
-        "import pickle"
+        "import pickle\n",
+        "from keras.utils.np_utils import to_categorical  "
       ],
-      "execution_count": 9,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -139,14 +140,14 @@
         "\n",
         "    _, sequence_output = bert_layer([input_word_ids, input_mask, segment_ids])\n",
         "    clf_output = sequence_output[:, 0, :]\n",
-        "    out = Dense(1, activation='sigmoid')(clf_output)\n",
+        "    out = Dense(6, activation='softmax')(clf_output)\n",
         "    \n",
         "    model = Model(inputs=[input_word_ids, input_mask, segment_ids], outputs=out)\n",
         "    model.compile(Adam(lr=2e-6), loss='binary_crossentropy', metrics=['accuracy'])\n",
         "    \n",
         "    return model"
       ],
-      "execution_count": 5,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -278,6 +279,170 @@
       ],
       "execution_count": 13,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B72KeG6yoiy3"
+      },
+      "source": [
+        "processed_data=np.asarray(processed_data)\n",
+        "test_processed_data=np.asarray(test_processed_data)"
+      ],
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "FH0titB8qFqZ"
+      },
+      "source": [
+        "Y=to_categorical(processed_label, num_classes=6)\n",
+        "test_Y=to_categorical(test_processed_label, num_classes=6)"
+      ],
+      "execution_count": 19,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qCsU3_48qRP_"
+      },
+      "source": [
+        "**Inputting the data now**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gdaaSY7jqNUb"
+      },
+      "source": [
+        "vocab_file = bert_layer.resolved_object.vocab_file.asset_path.numpy()\n",
+        "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
+        "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OyvDfiZEqQgm"
+      },
+      "source": [
+        "train_input = bert_encode(processed_data, tokenizer, max_len=160)\n",
+        "test_input = bert_encode(test_processed_data, tokenizer, max_len=160)\n",
+        "train_labels = Y\n",
+        "test_labels = test_Y"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1gmA9ffzqgMI",
+        "outputId": "cf4c516e-3876-438d-f318-f829e57eec7e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model = build_model(bert_layer, max_len=160)\n",
+        "model.summary()"
+      ],
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"functional_3\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "input_word_ids (InputLayer)     [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "input_mask (InputLayer)         [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "segment_ids (InputLayer)        [(None, 160)]        0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "keras_layer (KerasLayer)        [(None, 1024), (None 335141889   input_word_ids[0][0]             \n",
+            "                                                                 input_mask[0][0]                 \n",
+            "                                                                 segment_ids[0][0]                \n",
+            "__________________________________________________________________________________________________\n",
+            "tf_op_layer_strided_slice_1 (Te [(None, 1024)]       0           keras_layer[1][1]                \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_1 (Dense)                 (None, 6)            6150        tf_op_layer_strided_slice_1[0][0]\n",
+            "==================================================================================================\n",
+            "Total params: 335,148,039\n",
+            "Trainable params: 335,148,038\n",
+            "Non-trainable params: 1\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dh3lTp-DqsFm",
+        "outputId": "f12e641c-d1ab-4074-a421-90365da327b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "train_history = model.fit(\n",
+        "    train_input, train_labels,\n",
+        "    epochs=3,\n",
+        "    batch_size=16\n",
+        ")\n",
+        "\n",
+        "model.save('model.h5')"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "294/294 [==============================] - 471s 2s/step - loss: 0.4223 - accuracy: 0.3267\n",
+            "Epoch 2/3\n",
+            "294/294 [==============================] - 471s 2s/step - loss: 0.3381 - accuracy: 0.5282\n",
+            "Epoch 3/3\n",
+            "294/294 [==============================] - 471s 2s/step - loss: 0.2688 - accuracy: 0.6531\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cc_vLoXhvdc6",
+        "outputId": "124f7178-ac22-45d5-ff06-3f6e0a384f53",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "score,acc=model.evaluate(test_input,test_Y,verbose=2)\n",
+        "print(\"Accuracy : \"+ str(acc))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "51/51 - 62s - loss: 0.3579 - accuracy: 0.5028\n",
+            "Accuracy : 0.5027726292610168\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
