--- a/BERT_on_IEMOCAP_for_ERC.ipynb
+++ b/BERT_on_IEMOCAP_for_ERC.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "BERT_on_IEMOCAP_for_ERC.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOsFLNvcW9Z0tUuKx1+cZYb",
+      "authorship_tag": "ABX9TyM4G6qSoViAH9lrri+8hhoa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,14 +44,14 @@
         "import pickle\n",
         "from keras.utils.np_utils import to_categorical  "
       ],
-      "execution_count": 18,
+      "execution_count": 2,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jPQj8ZNajTfc",
-        "outputId": "5ab0b2ae-070f-431b-9ecc-29b281a72f62",
+        "outputId": "a9e0dcbf-00f4-439f-c2f7-1ce6f105b5f1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -60,16 +60,12 @@
         "!wget --quiet https://raw.githubusercontent.com/tensorflow/models/master/official/nlp/bert/tokenization.py\n",
         "!pip install sentencepiece"
       ],
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Collecting sentencepiece\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/e5/2d/6d4ca4bef9a67070fa1cac508606328329152b1df10bdf31fb6e4e727894/sentencepiece-0.1.94-cp36-cp36m-manylinux2014_x86_64.whl (1.1MB)\n",
-            "\r\u001b[K     |▎                               | 10kB 19.7MB/s eta 0:00:01\r\u001b[K     |▋                               | 20kB 25.7MB/s eta 0:00:01\r\u001b[K     |▉                               | 30kB 15.2MB/s eta 0:00:01\r\u001b[K     |█▏                              | 40kB 10.0MB/s eta 0:00:01\r\u001b[K     |█▌                              | 51kB 8.7MB/s eta 0:00:01\r\u001b[K     |█▊                              | 61kB 9.2MB/s eta 0:00:01\r\u001b[K     |██                              | 71kB 8.5MB/s eta 0:00:01\r\u001b[K     |██▍                             | 81kB 8.5MB/s eta 0:00:01\r\u001b[K     |██▋                             | 92kB 8.8MB/s eta 0:00:01\r\u001b[K     |███                             | 102kB 9.1MB/s eta 0:00:01\r\u001b[K     |███▎                            | 112kB 9.1MB/s eta 0:00:01\r\u001b[K     |███▌                            | 122kB 9.1MB/s eta 0:00:01\r\u001b[K     |███▉                            | 133kB 9.1MB/s eta 0:00:01\r\u001b[K     |████▏                           | 143kB 9.1MB/s eta 0:00:01\r\u001b[K     |████▍                           | 153kB 9.1MB/s eta 0:00:01\r\u001b[K     |████▊                           | 163kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████                           | 174kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████▎                          | 184kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████▋                          | 194kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████▉                          | 204kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████▏                         | 215kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████▌                         | 225kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████▊                         | 235kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████                         | 245kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████▍                        | 256kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████▋                        | 266kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████                        | 276kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████▎                       | 286kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████▌                       | 296kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████▉                       | 307kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████                       | 317kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████▍                      | 327kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████▊                      | 337kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████                      | 348kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████▎                     | 358kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████▋                     | 368kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████▉                     | 378kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████▏                    | 389kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████▌                    | 399kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████▊                    | 409kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████                    | 419kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████▍                   | 430kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████▋                   | 440kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████                   | 450kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████▎                  | 460kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████▌                  | 471kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████▉                  | 481kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████                  | 491kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████▍                 | 501kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████▊                 | 512kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████                 | 522kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████▎                | 532kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████▋                | 542kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████▉                | 552kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████▏               | 563kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████▌               | 573kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████▊               | 583kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████               | 593kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████▍              | 604kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████▋              | 614kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████              | 624kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▏             | 634kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▌             | 645kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████▉             | 655kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████             | 665kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████▍            | 675kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████▊            | 686kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████            | 696kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████▎           | 706kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████▋           | 716kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████▉           | 727kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████▏          | 737kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████▌          | 747kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████▊          | 757kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████          | 768kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████▎         | 778kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████▋         | 788kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████         | 798kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████▏        | 808kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████▌        | 819kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████▉        | 829kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████        | 839kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████▍       | 849kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████▊       | 860kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████       | 870kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▎      | 880kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▋      | 890kB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████▉      | 901kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▏     | 911kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▌     | 921kB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████▊     | 931kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████     | 942kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▎    | 952kB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████▋    | 962kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████    | 972kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▏   | 983kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▌   | 993kB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████▉   | 1.0MB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████   | 1.0MB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▍  | 1.0MB 9.1MB/s eta 0:00:01\r\u001b[K     |█████████████████████████████▊  | 1.0MB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████  | 1.0MB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▎ | 1.1MB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▋ | 1.1MB 9.1MB/s eta 0:00:01\r\u001b[K     |██████████████████████████████▉ | 1.1MB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▏| 1.1MB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▍| 1.1MB 9.1MB/s eta 0:00:01\r\u001b[K     |███████████████████████████████▊| 1.1MB 9.1MB/s eta 0:00:01\r\u001b[K     |████████████████████████████████| 1.1MB 9.1MB/s \n",
-            "\u001b[?25hInstalling collected packages: sentencepiece\n",
-            "Successfully installed sentencepiece-0.1.94\n"
+            "Requirement already satisfied: sentencepiece in /usr/local/lib/python3.6/dist-packages (0.1.94)\n"
           ],
           "name": "stdout"
         }
@@ -83,7 +79,7 @@
       "source": [
         "import tokenization"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -124,7 +120,7 @@
         "    \n",
         "    return np.array(all_tokens), np.array(all_masks), np.array(all_segments)"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -147,14 +143,14 @@
         "    \n",
         "    return model"
       ],
-      "execution_count": 24,
+      "execution_count": 6,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "rpTgXa2hjje-",
-        "outputId": "5190e328-97c6-4034-9696-adf42cb0b66b",
+        "outputId": "b1875925-e67e-44d0-b7f1-8d53714240f5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -165,13 +161,13 @@
         "module_url = \"https://tfhub.dev/tensorflow/bert_en_uncased_L-24_H-1024_A-16/1\"\n",
         "bert_layer = hub.KerasLayer(module_url, trainable=True)"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "CPU times: user 43.8 s, sys: 11 s, total: 54.8 s\n",
-            "Wall time: 2min 9s\n"
+            "CPU times: user 41.5 s, sys: 10.7 s, total: 52.2 s\n",
+            "Wall time: 1min 47s\n"
           ],
           "name": "stdout"
         }
@@ -190,7 +186,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "oZ5pmNKbkf05",
-        "outputId": "61106023-7018-474e-9b7f-09cde157d744",
+        "outputId": "b6e38c8e-8a4d-4390-ffc1-b7537637cf6d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -199,12 +195,12 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/gdrive\n"
+            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -225,7 +221,7 @@
         "with open('/content/gdrive/My Drive/iemocap/test/labels.pkl', 'rb') as f:\n",
         "    test_labels = pickle.load(f)"
       ],
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -251,7 +247,7 @@
         "      processed_label.append(j)\n",
         "  return processed_data,processed_label"
       ],
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -263,7 +259,7 @@
         "processed_data,processed_label = preprocessing(data,labels)\n",
         "test_processed_data,test_processed_label = preprocessing(test_data,test_labels)"
       ],
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -277,7 +273,7 @@
         "for i in range(0,len(test_processed_data)):\n",
         "  test_processed_data[i]=' '.join(test_processed_data[i])"
       ],
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -289,7 +285,7 @@
         "processed_data=np.asarray(processed_data)\n",
         "test_processed_data=np.asarray(test_processed_data)"
       ],
-      "execution_count": 16,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -301,7 +297,7 @@
         "Y=to_categorical(processed_label, num_classes=6)\n",
         "test_Y=to_categorical(test_processed_label, num_classes=6)"
       ],
-      "execution_count": 19,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -323,7 +319,7 @@
         "do_lower_case = bert_layer.resolved_object.do_lower_case.numpy()\n",
         "tokenizer = tokenization.FullTokenizer(vocab_file, do_lower_case)"
       ],
-      "execution_count": 20,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -337,14 +333,14 @@
         "train_labels = Y\n",
         "test_labels = test_Y"
       ],
-      "execution_count": 22,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "1gmA9ffzqgMI",
-        "outputId": "cf4c516e-3876-438d-f318-f829e57eec7e",
+        "outputId": "5eb6baff-fda2-4e0f-84c2-2b9d911a7fc9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -353,12 +349,12 @@
         "model = build_model(bert_layer, max_len=160)\n",
         "model.summary()"
       ],
-      "execution_count": 25,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"functional_3\"\n",
+            "Model: \"functional_1\"\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
@@ -372,9 +368,9 @@
             "                                                                 input_mask[0][0]                 \n",
             "                                                                 segment_ids[0][0]                \n",
             "__________________________________________________________________________________________________\n",
-            "tf_op_layer_strided_slice_1 (Te [(None, 1024)]       0           keras_layer[1][1]                \n",
+            "tf_op_layer_strided_slice (Tens [(None, 1024)]       0           keras_layer[0][1]                \n",
             "__________________________________________________________________________________________________\n",
-            "dense_1 (Dense)                 (None, 6)            6150        tf_op_layer_strided_slice_1[0][0]\n",
+            "dense (Dense)                   (None, 6)            6150        tf_op_layer_strided_slice[0][0]  \n",
             "==================================================================================================\n",
             "Total params: 335,148,039\n",
             "Trainable params: 335,148,038\n",
@@ -389,7 +385,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "dh3lTp-DqsFm",
-        "outputId": "f12e641c-d1ab-4074-a421-90365da327b7",
+        "outputId": "0b6003e5-46f0-4a5c-b25e-5b353a112ad1",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -397,23 +393,29 @@
       "source": [
         "train_history = model.fit(\n",
         "    train_input, train_labels,\n",
-        "    epochs=3,\n",
+        "    epochs=6,\n",
         "    batch_size=16\n",
         ")\n",
         "\n",
         "model.save('model.h5')"
       ],
-      "execution_count": 26,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Epoch 1/3\n",
-            "294/294 [==============================] - 471s 2s/step - loss: 0.4223 - accuracy: 0.3267\n",
-            "Epoch 2/3\n",
-            "294/294 [==============================] - 471s 2s/step - loss: 0.3381 - accuracy: 0.5282\n",
-            "Epoch 3/3\n",
-            "294/294 [==============================] - 471s 2s/step - loss: 0.2688 - accuracy: 0.6531\n"
+            "Epoch 1/6\n",
+            "294/294 [==============================] - 472s 2s/step - loss: 0.4105 - accuracy: 0.3505\n",
+            "Epoch 2/6\n",
+            "294/294 [==============================] - 472s 2s/step - loss: 0.3278 - accuracy: 0.5510\n",
+            "Epoch 3/6\n",
+            "294/294 [==============================] - 471s 2s/step - loss: 0.2610 - accuracy: 0.6697\n",
+            "Epoch 4/6\n",
+            "294/294 [==============================] - 472s 2s/step - loss: 0.2000 - accuracy: 0.7712\n",
+            "Epoch 5/6\n",
+            "294/294 [==============================] - 471s 2s/step - loss: 0.1519 - accuracy: 0.8442\n",
+            "Epoch 6/6\n",
+            "294/294 [==============================] - 472s 2s/step - loss: 0.1154 - accuracy: 0.8893\n"
           ],
           "name": "stdout"
         }
@@ -423,7 +425,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "Cc_vLoXhvdc6",
-        "outputId": "124f7178-ac22-45d5-ff06-3f6e0a384f53",
+        "outputId": "9ba05ca9-1e96-4561-ba61-98ed77fc3685",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -432,13 +434,13 @@
         "score,acc=model.evaluate(test_input,test_Y,verbose=2)\n",
         "print(\"Accuracy : \"+ str(acc))"
       ],
-      "execution_count": 29,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "51/51 - 62s - loss: 0.3579 - accuracy: 0.5028\n",
-            "Accuracy : 0.5027726292610168\n"
+            "51/51 - 62s - loss: 0.3661 - accuracy: 0.5052\n",
+            "Accuracy : 0.5052372217178345\n"
           ],
           "name": "stdout"
         }
